2016-06-26  Gavin Smith  <gavinsmith0123@gmail.com>

	* tp/Texinfo/Parser.pm (_parse_texi, _register_global_command)
	(_register_label, _enter_index_entry, _end_line)
	(_parse_line_command_args, _parse_special_misc_commands): Remove 
	uses of _ignore_global_commands.  Remove some commented-out 
	lines of code.
	(parser, simple_parser): Remove reference to 
	$self->{'expanded_formats_stack'}.
	(_ignore_global_commands): Removed.

2016-06-26  Gavin Smith  <gavinsmith0123@gmail.com>

	* tp/Texinfo/Parser.pm (_parse_texi): For raw block commands 
	(like @tex) and raw inline commands (@inlinefmt), skip over the 
	part of the conditional that isn't expanded, instead of parsing 
	it as usual and using a stack of expanded conditionals.  Add a 
	dummy argument to the parse tree for the skipped-over argument.
	This will mean that there is no use for the 
	_ignore_global_commands function.  This change is intended to 
	make implementation of the parser module in C easier, and should 
	also make the Perl module itself simpler.

	(_close_current, _close_commands): Do not refer to 
	$self->{'expanded_formats_stack'}.

	(_ignore_global_commands): Always return 0.

2016-06-25  Gavin Smith  <gavinsmith0123@gmail.com>

	* tp/t/test_utils.pl (set_converter_option_defaults): Set 
	default expanded formats hash for converter even if this was 
	given in the parser options.  This helps to make the parser 
	options and converter options separate.

	(test) If expanded formats not defined in the parser options, 
	expand all of the formats except 'tex'.

	* t/16raw.t,
	* t/50value.t,
	* t/55conditionals.t,
	* t/57invalid_nestings.t,
	* t/60macro.t,
	* t/converters_tests.t,
	* t/html_tests.t,
	* t/plaintext_tests.t:
	Add 'expanded_formats' configuration values where required to 
	minimize changes to the results of the tests.

2016-06-19  Gavin Smith  <gavinsmith0123@gmail.com>

	* tp/Texinfo/Parser.pm (_end_line, _parse_texi): Remove some 
	commented-out code.
